Fix right nav items overlap conversation list

--- a/public/sass/_chat.scss
+++ b/public/sass/_chat.scss
@@ -40,6 +40,7 @@ nav.bar {
   ul.conversations { height: $navHeight; }
 
   .right {
+    background: $sidebarBackground; // required when right overlap conversation list
     position: absolute;
     top: 0;
     right: $bodyGutter;
